# opsdeck-core

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: .dockerignore  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/api/: routes.py
apps/api/app/core/: enums.py  settings.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  entities.py
apps/api/app/schemas/: entities.py
apps/api/app/services/: activity.py  catalog.py  findings.py  overview.py  runs.py  seed.py  text.py
apps/api/tests/: conftest.py  test_activity.py  test_findings.py  test_health.py  test_modules.py  test_overview.py  test_projects.py  test_runs.py  test_system.py
apps/web/: .dockerignore  Dockerfile  package-lock.json  package.json
apps/web/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  styles.css
apps/web/app/findings/: page.tsx
apps/web/app/modules/: page.tsx
apps/web/app/projects/: page.tsx
apps/web/app/roadmap/: page.tsx
apps/web/app/runs/: page.tsx
apps/web/app/status/: page.tsx
apps/web/components/: ApiStatus.tsx  Cards.tsx  PageHeader.tsx  SeverityBar.tsx  Shell.tsx  Sidebar.tsx  icons.tsx  ui.tsx
apps/web/lib/: api.ts  format.ts
