[project]
name = "opsdeck-api"
version = "0.2.0"
description = "Control plane API for the OpsDeck DevOps and DevSecOps platform."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
